--- a/FeedPet/templates/feed/feed.html
+++ b/FeedPet/templates/feed/feed.html
@@ -9,57 +9,80 @@
 {% block content %}
 
 <div id="first" class="ts top attached tabbed menu">
-    <a class="{{dogactive}} item" data-tab="狗狗">狗狗</a>
-    <a class="{{catactive}}item" data-tab="貓貓">貓貓</a>
+{% if cal_petclass == 'dog' %}
+    <a class="active item" data-tab="狗狗">狗狗</a>
+    <a class="item" data-tab="貓貓">貓貓</a>
+{% elif cal_petclass == 'cat' %}
+    <a class="item" data-tab="狗狗">狗狗</a>
+    <a class="active item" data-tab="貓貓">貓貓</a>
+    {% else %}
+     <a class="active item" data-tab="狗狗">狗狗</a>
+    <a class="item" data-tab="貓貓">貓貓</a>
+    {% endif %}
 </div>
 <div data-tab="狗狗" class="ts active bottom attached tab segment">
     <div class="ts relaxed grid">
         <div class="ten wide column">
-            <form class="ts form horizontal">
+            <form class="ts form horizontal" action="/feed/" method="post">
                 {{ pets.pet }}
                 <mark>這裡是狗狗</mark>
                 {% if user.is_authenticated %}
                 <div class="field">
                     <label>選擇哪隻狗狗</label>
-                    <select id='choseDog'>
+
+                    <select  id='choseDog' name="choseDog">
                         <option value="" disabled selected>選擇一個狗狗</option>
                         {% for pet in pets %}
                         {% if pet.petClass == 'Dog' %}
-                        <option value="{{ pet.id }}">{{ pet.petName }}</option>
+                            {% if cal_petclass ==  'dog' %}
+                                {% if pet.id|stringformat:"i" == cal_dog_id %}
+                                    <option value="{{pet.id}}" selected = 'selected' >{{pet.petName}}</option>
+                                {% else %}
+                                    <option value="{{ pet.id }}">{{ pet.petName }}</option>
+                                {% endif %}
+                            {% else %}
+                                <option value="{{ pet.id }}">{{ pet.petName }}</option>
+                            {% endif %}
+
                         {% endif %}
                         {% endfor %}
                     </select>
 
                 </div>
                 {% endif %}
+
                 <div class="field">
                     <label>體重</label>
-                    <input type="number" id="dog_weight">
+                    {% if cal_petclass ==  'dog' %}
+                    <input type="number" name="dog_weight" id="dog_weight" value="{{weight}}" required>
+                    {% else %}
+                    <input type="number" name="dog_weight" id="dog_weight" " required>
+                    {% endif %}
                 </div>
                 <div class="field">
                     <label>活動類型</label>
-                    <select id='dog_type'>
+                    <select id='dog_type' name="dog_type" required >
                         <option value="" disabled selected>選擇活動類型</option>
-                        <option>成犬(室內/中低活動量)</option>
-                        <option>成犬(中高度活動量)</option>
-                        <option>需增重成犬(輸入目標體重)</option>
-                        <option>需減肥成犬(輸入目標體重)</option>
-                        <option>成長期幼犬(斷奶至4個月)</option>
-                        <option>成長期幼犬(4個月至10個月)</option>
-                        <option>懷孕母犬(前42天)</option>
-                        <option>懷孕母犬(最後21天)</option>
-                        <option>哺乳母犬</option>
+                        <option value="1.2">成犬(室內/中低活動量)</option>
+                        <option value="1.6">成犬(中高度活動量)</option>
+                        <option value="1.4">需增重成犬(輸入目標體重)</option>
+                        <option value="1">需減肥成犬(輸入目標體重)</option>
+                        <option value="2.9">成長期幼犬(斷奶至4個月)</option>
+                        <option value="1.9">成長期幼犬(4個月至10個月)</option>
+                        <option value="1.8">懷孕母犬(前42天)</option>
+                        <option value="2.9">懷孕母犬(最後21天)</option>
+                        <option value="4">哺乳母犬</option>
                     </select>
                 </div>
                 <div class="field">
                     <label>是否結紮</label>
                     <div class="ts checkboxes">
                         <div class="ts radio checkbox">
-                            <input id="dog_yes" type="radio" name="dog_ligation" value="Yes">
+                            <input id="dog_yes" type="radio" name="dog_ligation" value="0.888">
                             <label for="dog_yes">有</label>
                         </div>
                         <div class="ts radio checkbox">
-                            <input id="dog_no" type="radio" name="dog_ligation" value="No">
+                            <input id="dog_no" type="radio" name="dog_ligation" value="1">
                             <label for="dog_no">無</label>
                         </div>
                     </div>
@@ -96,10 +119,11 @@
         </div>
     </div>
 </div>
+
 <div data-tab="貓貓" class="ts bottom attached tab segment">
     <div class="ts relaxed grid">
         <div class="ten wide column">
-            <form class="ts form horizontal">
+            <form class="ts form horizontal" action="/feed/" method="post" name="petclass" value="cat">
                 <mark>這裡是貓貓</mark>
                 {% if user.is_authenticated %}
                 <div class="field">
@@ -116,36 +140,38 @@
                 {% endif %}
                 <div class="field">
                     <label>體重</label>
-                    <input type="number" id="cat_weight">
+                    <input type="number" name="cat_weight" id="cat_weight">
                 </div>
                 <div class="field">
                     <label>活動類型</label>
-                    <select id='cat_type'>
+                    <select name = 'cat_type' id='cat_type'>
                         <option value="" disabled selected>選擇活動類型</option>
-                        <option>成貓(室內/低活動量)</option>
-                        <option>成貓(中高活動量)</option>
-                        <option>需增重成貓(輸入目標體重)</option>
-                        <option>需減肥成貓(輸入目標體重)</option>
-                        <option>成長期幼貓(10個月以內)</option>
-                        <option>老貓(11歲以上)</option>
-                        <option>懷孕母貓</option>
-                        <option>哺乳母貓</option>
+                        <option value="1">成貓(室內/低活動量)</option>
+                        <option value="1.3">成貓(中高活動量)</option>
+                        <option value="1.5">需增重成貓(輸入目標體重)</option>
+                        <option value="0.8">需減肥成貓(輸入目標體重)</option>
+                        <option value="2.5">成長期幼貓(10個月以內)</option>
+                        <option value="0.9">老貓(11歲以上)</option>
+                        <option value="1.8">懷孕母貓</option>
+                        <option value="3">哺乳母貓</option>
                     </select>
                 </div>
                 <div class="field">
                     <label>是否結紮</label>
                     <div class="ts checkboxes">
                         <div class="ts radio checkbox">
-                            <input id="cat_yes" type="radio" name="cat_ligation" value="Yes">
+                            <input id="cat_yes" type="radio" name="cat_ligation" value="0.857">
                             <label for="cat_yes">有</label>
                         </div>
                         <div class="ts radio checkbox">
-                            <input id="cat_no" type="radio" name="cat_ligation" value="No">
+                            <input id="cat_no" type="radio" name="cat_ligation" value="1">
                             <label for="cat_no">無</label>
                         </div>
                     </div>
                 </div>
-                <button class="ts button">計算餵食量</button>
+                <button class="ts button" name="petclass" value="cat">計算餵食量</button>
+                <!--                <input name="petclass" value="cat" type="submit">-->
+
                 <button class="ts button">
                     <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
                 </button>
