--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -246,7 +246,7 @@
                     if (data) {
                         $('#dog_weight').val(data.weight)
                         $('#dog_type option').each(function (index, value) {
-                            if ($(this).val() == data.petType) { // EDITED THIS LINE
+                            if ($(this).text() == data.petType) { // EDITED THIS LINE
                                 $(this).prop('selected', true)
                             }
                         });
@@ -270,7 +270,7 @@
                     if (data) {
                         $('#cat_weight').val(data.weight)
                         $('#cat_type option').each(function (index, value) {
-                            if ($(this).val() == data.petType) { // EDITED THIS LINE
+                            if ($(this).text() == data.petType) { // EDITED THIS LINE
                                 $(this).prop('selected', true)
                             }
                         });
