計算失敗重來

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -230,12 +230,23 @@
                 getDogInfo(value)
             });
         });
-        $("#choseCat").change(function () {
+        $("#choseDog").change(function () {
             $("#choseCat option:selected").each(function () {
                 var value = $("#choseCat").val();
                 getCatInfo(value)
             });
         });
+
+        $("#dog_cal").click(function () {
+            var weight = $("#dog_weight").val();
+            var type = $("#dog_type").val();
+            var ligation = $(".dog_ligation:checked").val();
+            var cal_dog_id = $("#choseDog").val();
+            var cal_petclass = 'dog'
+
+            petCalculation(value)
+        });
+
         //透過api跟後端要被選取的寵物的資料 並套入現有的欄位中
         function getDogInfo(petId) {
             $.ajax({
@@ -278,6 +289,31 @@
                             $('#cat_yes').prop('checked', true)
                         } else {
                             $('#cat_no').prop('checked', true)
+                        }
+                    }
+                },
+                error: function (err) {
+                }
+            });
+        }
+
+        function petCalculation(petId) {
+            $.ajax({
+                url: '/feed/' ,
+                type: 'POST',
+                dataType: 'json',
+                success: function (data) {
+                    if (data) {
+                        $('#dog_weight').val(data.weight)
+                        $('#dog_type option').each(function (index, value) {
+                            if ($(this).val() == data.petType) { // EDITED THIS LINE
+                                $(this).prop('selected', true)
+                            }
+                        });
+                        if (data.ligation == 'Yes') {
+                            $('#dog_yes').prop('checked', true)
+                        } else {
+                            $('#dog_no').prop('checked', true)
                         }
                     }
                 },
