Revert "計算失敗重來"
This reverts commit aa0b97ed80eb18724935fddb00169db9669a2c7c, reversing
changes made to 0506ce6abafed652a98647f963398045230a1641.

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -257,7 +257,7 @@
                     if (data) {
                         $('#dog_weight').val(data.weight)
                         $('#dog_type option').each(function (index, value) {
-                            if ($(this).text() == data.petType) { // EDITED THIS LINE
+                            if ($(this).val() == data.petType) { // EDITED THIS LINE
                                 $(this).prop('selected', true)
                             }
                         });
@@ -281,7 +281,7 @@
                     if (data) {
                         $('#cat_weight').val(data.weight)
                         $('#cat_type option').each(function (index, value) {
-                            if ($(this).text() == data.petType) { // EDITED THIS LINE
+                            if ($(this).val() == data.petType) { // EDITED THIS LINE
                                 $(this).prop('selected', true)
                             }
                         });
