--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -255,7 +255,7 @@
                     if (data) {
                         console.log(data)
                         $('#dogcannedFood').val(data.cannedFood)
-                        $('#dograwFood').val(data.cannedFood)
+                        $('#dograwFood').val(data.rawFood)
                         $('#dogLyophilizerdRawFood').val(data.LyophilizerdRawFood)
                         $('#dogwater').val(data.water)
                     }
@@ -283,7 +283,7 @@
                     if (data) {
                         console.log(data)
                         $('#catcannedFood').val(data.cannedFood)
-                        $('#catrawFood').val(data.cannedFood)
+                        $('#catrawFood').val(data.rawFood)
                         $('#catLyophilizerdRawFood').val(data.LyophilizerdRawFood)
                         $('#catwater').val(data.water)
                     }
