--- a/FeedPet/templates/pet/mypet.html
+++ b/FeedPet/templates/pet/mypet.html
@@ -28,12 +28,12 @@
             <button class="ts button" onclick="location.href='/feed/feeding_record'">餵食紀錄</button>
         </div>
         <div class="ts fluid stackable buttons">
-            <button class="ts negative button" onclick="showDimmer()">刪除寵物</button>
+            <button class="ts negative button" onclick="showDimmer_delpet()">刪除寵物</button>
         </div>
 
         <!-- 彈跳訊息 -->
         <div class="ts modals dimmer">
-            <dialog id="closableModal" class="ts closable tiny modal">
+            <dialog id="closableModal_delpet" class="ts closable tiny modal">
                 <div class="content">
                     <p>
                         你確定要刪除『{{pet.petName}}』嗎？<br>
