修改mypet圖片的css

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -34,7 +34,7 @@
         }
 
         .card {
-            width: 32% !important;
+            width: 300px !important;
             margin: 5px !important;
         }
 
@@ -43,6 +43,17 @@
             flex-direction: row;
             justify-content: flex-start;
             flex-wrap: wrap;
+        }
+
+        .mypet_img {
+            max-width: 296px;
+            max-height: 250px;
+        }
+
+        .mypet_div {
+            width: 298px;
+            height: 250px;
+            background-color: rgb(253, 253, 253);
         }
     </style>
 
