--- a/FeedPet/templates/pet/mypet.html
+++ b/FeedPet/templates/pet/mypet.html
@@ -15,8 +15,8 @@
 <div class="cards">
     {% for pet in pets %}
     <div class="ts card">
-        <div class="image">
-            <img class="ts image" src="{{ pet.image.url }}">
+        <div class="image mypet_div">
+            <img class="ts image mypet_img" src="{{ pet.image.url }}">
         </div>
         <div class="content">
             <div class="center aligned header">{{ pet.petName }}</div>
