--- a/FeedPet/templates/index.html
+++ b/FeedPet/templates/index.html
@@ -1,23 +1,169 @@
 {% extends "base.html" %}
-{% load staticfiles %}
+{% load static %}
 
 {% block header %}
 
+
+
 {% endblock header %}
+
 
 {% block content %}
 
-<div class="ts two cards">
-    <div class="ts borderless card">
+<div class="ts one waterfall card ">
+
+    <div class="topimg">
+        <h2>寵愛毛孩N0.1！為汪喵買寵物險，水象星座不手軟</h2>
+    </div>
+
+
+</div>
+<div class="ts three waterfall cards">
+    <div class="ts card">
         <div class="image">
-            <img class="ts image" src="{% static 'images/dogandcat.png' %}">
+            <img class="ts image" src="{% static 'images/slide/001.jpg' %}">
+        </div>
+
+        <div class="content">
+            <div class="header">
+                <h4>狗狗喘氣發出怪聲，竟是狗氣管塌陷 </h4>
+            </div>
+            <p>
+                狗氣管塌陷是導致小型犬咳嗽的常見原因之一。主要是由於狗狗的氣管中有某部分軟骨軟化鬆弛，引起該處的氣管扁塌，空氣無法順利地進出，因此造成狗狗呼吸困難的現象。發作時，狗狗的呼吸聲會變大，發出類似鵝鳴的聲音。
+            </p>
+
+
+        </div>
+
+        <div class="extra content">
+            <div class="right floated author">
+                <a href="">Read More</a>
+            </div>
         </div>
     </div>
-    <div class="ts borderless card">
+    <div class="ts card">
         <div class="image">
-            <img class="ts image" src="{% static 'images/feed.png' %}">
+            <img class="ts image" src="{% static 'images/slide/002.jpg' %}">
+        </div>
+
+        <div class="content">
+            <div class="header">
+                <h4>狗咳嗽千萬別忽 可能是心臟病或氣管塌陷</h4>
+            </div>
+            <p>狗咳嗽是很常發生的問題之一，很多狗爸媽往往不知道牠為什麼咳嗽，因此有時聽到狗狗時不時咳了幾聲，可能會覺得這沒什麼而不加理會。但其實狗狗咳嗽可能代表了健康上的問題，而且有些還是很嚴重的問題，像是心臟病或氣管塌陷，需要及早發現才能給狗狗適當的治療。
+                今天我們就要來介紹幾個常見的咳嗽原因，如果你家毛寶貝最近也常咳嗽的話，請注意一下牠是不是發生這些問題喔！</p>
+
+
+        </div>
+
+        <div class="extra content">
+            <div class="right floated author">
+                <a href="">Read More</a>
+            </div>
+        </div>
+    </div>
+    <div class="ts card">
+        <div class="image">
+            <img class="ts image" src="{% static 'images/slide/003.jpg' %}">
+        </div>
+        <div class="content">
+            <div class="header">
+                <h4>貓腎衰竭照顧，飲食、照護每個環節缺一不可</h4>
+            </div>
+            <p>動保處2014年公布的家犬家貓「十大死因」報告中，腎衰竭高居貓咪死亡疾病的前三名！</p>
+
+
+        </div>
+
+        <div class="extra content">
+            <div class="right floated author">
+                <a href="">Read More</a>
+            </div>
+        </div>
+    </div>
+    <div class="ts card">
+        <div class="image">
+            <img class="ts image" src="{% static 'images/slide/004.jpg' %}">
+        </div>
+        <div class="content">
+            <div class="header">
+                <h4>不想狗狗膀胱炎？多喝水就對了</h4>
+            </div>
+            <p>動保處2014年公布的家犬家貓「十大死因」報告中，腎衰竭高居貓咪死亡疾病的前三名！當狗狗出現有排尿上的困難或是異常時，往往是與泌尿系統的疾病有關，而泌尿系統包括了腎臟、輸尿管、膀胱及尿道。其中膀胱及尿道屬於下泌尿道，通常引起狗膀胱炎或泌尿道發炎的原因包括細菌感染、結石、腫瘤……等等。母狗的發生機率比公狗高。
+
+            </p>
+            <p>細菌感染是下泌尿道炎最常見的原因。因為細菌常會經由尿道開口進入狗狗的尿道中，然後上行到膀胱，並在此繁殖。這些感染下泌尿道的細菌往往來自於環境，或是從肛門的糞便污染而來。正常的排尿頻率可以幫助沖掉尿道中的細菌，而憋尿會使尿液累積在膀胱中，因而讓細菌容易在裡頭增殖。
+            </p>
+
+
+        </div>
+
+        <div class="extra content">
+            <div class="right floated author">
+                <a href="">Read More</a>
+            </div>
+        </div>
+    </div>
+    <div class="ts card">
+        <div class="image">
+            <img class="ts image" src="{% static 'images/slide/005.jpg' %}">
+        </div>
+        <div class="content">
+            <div class="header">
+                <h4>預防狗狗白內障、青光眼等眼疾問題，九種食物打造狗狗明亮雙眼</h4>
+            </div>
+            <p>狗狗的眼睛也跟人類一樣，有一些常見的眼疾問題，像是葡萄膜炎、白內障、青光眼等等，會造成眼睛的不適和視力的受損。要加強眼睛的防護力，降低發生眼疾的風險，不妨可以給狗狗補充一些有益眼睛健康的食物。以下列出九種食物，你可以適量添加在狗狗的食物當中，提供眼睛需要的營養
+            </p>
+
+
+        </div>
+
+        <div class="extra content">
+            <div class="right floated author">
+                <a href="">Read More</a>
+            </div>
+        </div>
+    </div>
+    <div class="ts card">
+        <div class="image">
+            <img class="ts image" src="{% static 'images/slide/006.jpg' %}">
+        </div>
+        <div class="content">
+            <div class="header">
+                <h4>這些不良習慣母湯喔！毛孩的常見疾病是這樣養出來的！</h4>
+            </div>
+            <p>人人都愛毛小孩，卻常常用人類的習慣和思維來飼養牠們，不僅會養成毛孩們的壞習慣，甚至會影響牠們的健康，尤其是以下七個NG行為，是飼主們最常犯的通病</p>
+
+
+        </div>
+
+        <div class="extra content">
+            <div class="right floated author">
+                <a href="">Read More</a>
+            </div>
+        </div>
+    </div>
+    <div class="ts card">
+        <div class="image">
+            <img class="ts image" src="{% static 'images/slide/008.jpg' %}">
+        </div>
+        <div class="content">
+            <div class="header">
+                <h4>貓主子長期上吐下瀉，有可能是慢性腸道炎症(IBD)！</h4>
+            </div>
+            <p>多數飼主以為貓主子只是一般的吃壞肚子，所以不太放在心上，覺得給貓咪吃個腸胃藥就好了；但沒想到原本以為的小問題卻衍變成貓主子長期、反覆地出現嘔吐拉肚子的症狀。如果遇到這種情形，此時你就需要警惕，貓咪是否患上了慢性腸道炎症(IBD)！
+            </p>
+
+
+        </div>
+
+        <div class="extra content">
+            <div class="right floated author">
+                <a href="">Read More</a>
+            </div>
         </div>
     </div>
 </div>
+
 
 {% endblock content %}
