--- a/FeedPet/templates/pet/mypet.html
+++ b/FeedPet/templates/pet/mypet.html
@@ -12,7 +12,7 @@
 
 <div class="ts horizontal divider">我的寵物清單</div>
 
-<div class="cards">
+<div class="ts three cards">
     {% for pet in pets %}
     <div class="ts card">
         <div class="image mypet_div">
